[tool.poetry]
name = "pet-project"
version = "0.1.0"
description = ""
authors = ["Kimi <kimiko.ami2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic-settings = "^2.4.0"
motor = "^3.5.1"
motor-types = "^1.0.0b4"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.11.1"
pre-commit = "^3.8.0"


[tool.ruff]
line-length=79
target-version = 'py312'


[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # pycodestyle
  "E4",
  "E7",
  "E9",
  # isort
  "I",
  # pep8-naming
  "N",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "./src/"
allow_untyped_globals = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = false
show_error_codes = true
warn_return_any = true
warn_unused_configs = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
